fixed moon rotation on mobile devices

--- a/src/components/MenuHmb/MenuHmd.css
+++ b/src/components/MenuHmb/MenuHmd.css
@@ -80,7 +80,8 @@
 
         .MenuHmb .theme img {
             width: 1.8rem;
-            height: 1.8rem;
+        transform: rotate(40deg);
+        height: 1.8rem;
         }
     
         .MenuHmb .theme img:hover {
