--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -247,6 +247,7 @@
 
     .navbar .theme img {
         width: 1.8rem;
+        transform: rotate(40deg);
         height: 1.8rem;
     }
 
